# RPC-game

./: .env.production.example  .gitignore  Anchor.toml.bak  DEPLOYMENT_DEVNET_PROMPT.md  MAPPING_ANCIENNE_NOUVELLE.md  NAVIGATION.md  ORGANISATION_FINALE.md  QUICK_DEPLOY_COMMANDS.sh  README_NOUVELLE_STRUCTURE.md  README_STRUCTURE.md  build-simple.sh  deploy-github-pages.sh  deploy-vercel.sh  frontend-package.json  index.html  netlify.toml  package-lock.json  package-minimal.json  package.json  readme.md  solduel-demo.html  tailwind.config.js  test-debug.html  test-interface.html  tsconfig.app.json  tsconfig.build.json  tsconfig.json  tsconfig.paths.json  vercel.json  vite.config.ts
.config/: cache-config.js  rust-toolchain.toml
config/: .github-workflows-rust.yml  compliance-framework.md  production-checklist.md  security-monitoring-config.json
docs/: API_DOCUMENTATION.md  ARCHITECTURE_OVERVIEW.md  CLEANUP_REPORT.md  CODE_QUALITY_ANALYSIS_REPORT.md  COMPARAISON_SMART_CONTRACTS.md  DEPLOIEMENT_VERCEL_GUIDE.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_FINAL.md  DEVELOPER_GUIDE.md  DEVNET_DEPLOYMENT_DETAILS.md  DEVNET_VS_MAINNET_DIFFERENCES.md  ETAT_PROGRAMME_UNIVERSEL.md  FRONTEND_DEVNET_CONFIGURATION.md  HOW_TO_TEST.md  INSTRUCTIONS_COMPLETION_REPORT.md  (+35 more)
programs/universal_pvp/: Cargo.toml  Cargo.toml.backup  README.md
programs/universal_pvp/src/: lib.rs.bak  lib_original_rps.rs  lib_universal.rs  universal_engine.rs
programs/universal_pvp/src/games/: dice.rs  mod.rs  rock_paper_scissors.rs  round_manager.rs  rps_multi_round.rs
(+197 files in other folders)
